Update from https://github.com/thebesttv/eserver-static/commit/bcd4799847fec909c281a2e9466050c69bc1c9f8

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 21:49 -->
+<!-- 2022-10-11 03:05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1d71b37">1. 妙妙文章</a>
+<li><a href="#org15ec338">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgd752f72">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org69b6fa4">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org5a2b9d1">1.3. 关于编辑器</a></li>
-<li><a href="#org6f254e5">1.4. 关于代码</a>
+<li><a href="#org667d032">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org573285e">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org3f6d177">1.3. 关于编辑器</a></li>
+<li><a href="#org37a47f3">1.4. 关于代码</a>
 <ul>
-<li><a href="#org8a8029b">1.4.1. Lisp</a></li>
+<li><a href="#org7313686">1.4.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org5fccb9a">1.5. 关于CPU</a></li>
-<li><a href="#org6f78545">1.6. 关于算法</a>
+<li><a href="#orgead92bc">1.5. 关于CPU</a></li>
+<li><a href="#org1264322">1.6. 关于算法</a>
 <ul>
-<li><a href="#org3a41eeb">1.6.1. 关于随机</a></li>
+<li><a href="#org98e3b5c">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org7926c3e">1.7. 关于AI</a></li>
-<li><a href="#org07878d0">1.8. 关于软件</a>
+<li><a href="#orgadb900d">1.7. 关于AI</a></li>
+<li><a href="#org477ac8f">1.8. 关于软件</a>
 <ul>
-<li><a href="#org31e32fa">1.8.1. SQLite</a></li>
+<li><a href="#orga8f5346">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgeb9a9cb">1.9. 关于workflow</a></li>
+<li><a href="#org714aa94">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org8f7ae9a">2. 棒棒视频</a>
+<li><a href="#org834361f">2. 棒棒视频</a>
 <ul>
-<li><a href="#orge29f8a2">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org6d6306a">2.2. 各种剧</a></li>
-<li><a href="#org817ee1a">2.3. 电影</a></li>
+<li><a href="#orgf620fce">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org84e237b">2.2. 各种剧</a></li>
+<li><a href="#orgdd7e184">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org0fba3b0">3. 快乐游戏</a></li>
-<li><a href="#orgaa94c0f">4. 宝藏博主</a></li>
-<li><a href="#org57e6e5f">5. 有意思的</a>
+<li><a href="#orgb7abec0">3. 快乐游戏</a></li>
+<li><a href="#org8b8ea07">4. 宝藏博主</a></li>
+<li><a href="#org82e6c88">5. 有意思的</a>
 <ul>
-<li><a href="#org46c7567">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgb455052">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org9f93f09">6. 我想玩的</a></li>
+<li><a href="#orgd4762e5">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org1d71b37" class="outline-2">
-<h2 id="org1d71b37"><span class="section-number-2">1.</span> <a href="#org1d71b37">妙妙文章</a></h2>
+<div id="outline-container-org15ec338" class="outline-2">
+<h2 id="org15ec338"><span class="section-number-2">1.</span> <a href="#org15ec338">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org88d8145">
+<figure id="org3e3ded5">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgd752f72" class="outline-3">
-<h3 id="orgd752f72"><span class="section-number-3">1.1.</span> <a href="#orgd752f72">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org667d032" class="outline-3">
+<h3 id="org667d032"><span class="section-number-3">1.1.</span> <a href="#org667d032">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org69b6fa4" class="outline-3">
-<h3 id="org69b6fa4"><span class="section-number-3">1.2.</span> <a href="#org69b6fa4">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org573285e" class="outline-3">
+<h3 id="org573285e"><span class="section-number-3">1.2.</span> <a href="#org573285e">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org5a2b9d1" class="outline-3">
-<h3 id="org5a2b9d1"><span class="section-number-3">1.3.</span> <a href="#org5a2b9d1">关于编辑器</a></h3>
+<div id="outline-container-org3f6d177" class="outline-3">
+<h3 id="org3f6d177"><span class="section-number-3">1.3.</span> <a href="#org3f6d177">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org6f254e5" class="outline-3">
-<h3 id="org6f254e5"><span class="section-number-3">1.4.</span> <a href="#org6f254e5">关于代码</a></h3>
+<div id="outline-container-org37a47f3" class="outline-3">
+<h3 id="org37a47f3"><span class="section-number-3">1.4.</span> <a href="#org37a47f3">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8a8029b" class="outline-4">
-<h4 id="org8a8029b"><span class="section-number-4">1.4.1.</span> <a href="#org8a8029b">Lisp</a></h4>
+<div id="outline-container-org7313686" class="outline-4">
+<h4 id="org7313686"><span class="section-number-4">1.4.1.</span> <a href="#org7313686">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-4-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -639,8 +639,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org5fccb9a" class="outline-3">
-<h3 id="org5fccb9a"><span class="section-number-3">1.5.</span> <a href="#org5fccb9a">关于CPU</a></h3>
+<div id="outline-container-orgead92bc" class="outline-3">
+<h3 id="orgead92bc"><span class="section-number-3">1.5.</span> <a href="#orgead92bc">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -655,8 +655,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org6f78545" class="outline-3">
-<h3 id="org6f78545"><span class="section-number-3">1.6.</span> <a href="#org6f78545">关于算法</a></h3>
+<div id="outline-container-org1264322" class="outline-3">
+<h3 id="org1264322"><span class="section-number-3">1.6.</span> <a href="#org1264322">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org3a41eeb" class="outline-4">
-<h4 id="org3a41eeb"><span class="section-number-4">1.6.1.</span> <a href="#org3a41eeb">关于随机</a></h4>
+<div id="outline-container-org98e3b5c" class="outline-4">
+<h4 id="org98e3b5c"><span class="section-number-4">1.6.1.</span> <a href="#org98e3b5c">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7926c3e" class="outline-3">
-<h3 id="org7926c3e"><span class="section-number-3">1.7.</span> <a href="#org7926c3e">关于AI</a></h3>
+<div id="outline-container-orgadb900d" class="outline-3">
+<h3 id="orgadb900d"><span class="section-number-3">1.7.</span> <a href="#orgadb900d">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org07878d0" class="outline-3">
-<h3 id="org07878d0"><span class="section-number-3">1.8.</span> <a href="#org07878d0">关于软件</a></h3>
+<div id="outline-container-org477ac8f" class="outline-3">
+<h3 id="org477ac8f"><span class="section-number-3">1.8.</span> <a href="#org477ac8f">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org31e32fa" class="outline-4">
-<h4 id="org31e32fa"><span class="section-number-4">1.8.1.</span> <a href="#org31e32fa">SQLite</a></h4>
+<div id="outline-container-orga8f5346" class="outline-4">
+<h4 id="orga8f5346"><span class="section-number-4">1.8.1.</span> <a href="#orga8f5346">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgeb9a9cb" class="outline-3">
-<h3 id="orgeb9a9cb"><span class="section-number-3">1.9.</span> <a href="#orgeb9a9cb">关于workflow</a></h3>
+<div id="outline-container-org714aa94" class="outline-3">
+<h3 id="org714aa94"><span class="section-number-3">1.9.</span> <a href="#org714aa94">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org8f7ae9a" class="outline-2">
-<h2 id="org8f7ae9a"><span class="section-number-2">2.</span> <a href="#org8f7ae9a">棒棒视频</a></h2>
+<div id="outline-container-org834361f" class="outline-2">
+<h2 id="org834361f"><span class="section-number-2">2.</span> <a href="#org834361f">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orge29f8a2" class="outline-3">
-<h3 id="orge29f8a2"><span class="section-number-3">2.1.</span> <a href="#orge29f8a2">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgf620fce" class="outline-3">
+<h3 id="orgf620fce"><span class="section-number-3">2.1.</span> <a href="#orgf620fce">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6d6306a" class="outline-3">
-<h3 id="org6d6306a"><span class="section-number-3">2.2.</span> <a href="#org6d6306a">各种剧</a></h3>
+<div id="outline-container-org84e237b" class="outline-3">
+<h3 id="org84e237b"><span class="section-number-3">2.2.</span> <a href="#org84e237b">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org817ee1a" class="outline-3">
-<h3 id="org817ee1a"><span class="section-number-3">2.3.</span> <a href="#org817ee1a">电影</a></h3>
+<div id="outline-container-orgdd7e184" class="outline-3">
+<h3 id="orgdd7e184"><span class="section-number-3">2.3.</span> <a href="#orgdd7e184">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -872,8 +872,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0fba3b0" class="outline-2">
-<h2 id="org0fba3b0"><span class="section-number-2">3.</span> <a href="#org0fba3b0">快乐游戏</a></h2>
+<div id="outline-container-orgb7abec0" class="outline-2">
+<h2 id="orgb7abec0"><span class="section-number-2">3.</span> <a href="#orgb7abec0">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -902,8 +902,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgaa94c0f" class="outline-2">
-<h2 id="orgaa94c0f"><span class="section-number-2">4.</span> <a href="#orgaa94c0f">宝藏博主</a></h2>
+<div id="outline-container-org8b8ea07" class="outline-2">
+<h2 id="org8b8ea07"><span class="section-number-2">4.</span> <a href="#org8b8ea07">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -914,7 +914,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org708c07b">
+<figure id="org9c3ef33">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -922,8 +922,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org57e6e5f" class="outline-2">
-<h2 id="org57e6e5f"><span class="section-number-2">5.</span> <a href="#org57e6e5f">有意思的</a></h2>
+<div id="outline-container-org82e6c88" class="outline-2">
+<h2 id="org82e6c88"><span class="section-number-2">5.</span> <a href="#org82e6c88">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -947,8 +947,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org46c7567" class="outline-3">
-<h3 id="org46c7567"><span class="section-number-3">5.1.</span> <a href="#org46c7567">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgb455052" class="outline-3">
+<h3 id="orgb455052"><span class="section-number-3">5.1.</span> <a href="#orgb455052">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -960,8 +960,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org9f93f09" class="outline-2">
-<h2 id="org9f93f09"><span class="section-number-2">6.</span> <a href="#org9f93f09">我想玩的</a></h2>
+<div id="outline-container-orgd4762e5" class="outline-2">
+<h2 id="orgd4762e5"><span class="section-number-2">6.</span> <a href="#orgd4762e5">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -984,7 +984,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 21:49</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-11 03:05</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
