--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 21:49 -->
+<!-- 2022-10-11 03:05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org117b752">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org38ce2d1">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#orgf996c44">1.1. window config &amp; register</a></li>
-<li><a href="#org6f6a390">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org2bc21ba">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgf794fde">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org5f036c0">1.1. window config &amp; register</a></li>
+<li><a href="#orgfc13c3a">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org252922d">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org77258c2">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org117b752" class="outline-2">
-<h2 id="org117b752"><span class="section-number-2">1.</span> <a href="#org117b752">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org38ce2d1" class="outline-2">
+<h2 id="org38ce2d1"><span class="section-number-2">1.</span> <a href="#org38ce2d1">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgf996c44" class="outline-3">
-<h3 id="orgf996c44"><span class="section-number-3">1.1.</span> <a href="#orgf996c44">window config &amp; register</a></h3>
+<div id="outline-container-org5f036c0" class="outline-3">
+<h3 id="org5f036c0"><span class="section-number-3">1.1.</span> <a href="#org5f036c0">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org6f6a390" class="outline-3">
-<h3 id="org6f6a390"><span class="section-number-3">1.2.</span> <a href="#org6f6a390"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgfc13c3a" class="outline-3">
+<h3 id="orgfc13c3a"><span class="section-number-3">1.2.</span> <a href="#orgfc13c3a"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org2bc21ba" class="outline-3">
-<h3 id="org2bc21ba"><span class="section-number-3">1.3.</span> <a href="#org2bc21ba"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org252922d" class="outline-3">
+<h3 id="org252922d"><span class="section-number-3">1.3.</span> <a href="#org252922d"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf794fde" class="outline-3">
-<h3 id="orgf794fde"><span class="section-number-3">1.4.</span> <a href="#orgf794fde"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org77258c2" class="outline-3">
+<h3 id="org77258c2"><span class="section-number-3">1.4.</span> <a href="#org77258c2"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 21:49</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-11 03:05</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
