--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 21:49 -->
+<!-- 2022-10-11 03:05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -36,17 +36,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1cb1295">1. 一大早</a></li>
-<li><a href="#org2418f0d">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org0ff2ca4">3. 科研训练</a></li>
-<li><a href="#org394668d">4. 520</a></li>
+<li><a href="#orgc5e3144">1. 一大早</a></li>
+<li><a href="#orgf6d3052">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org34e9004">3. 科研训练</a></li>
+<li><a href="#org669f7b2">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org1cb1295" class="outline-2">
-<h2 id="org1cb1295"><span class="section-number-2">1.</span> <a href="#org1cb1295">一大早</a></h2>
+<div id="outline-container-orgc5e3144" class="outline-2">
+<h2 id="orgc5e3144"><span class="section-number-2">1.</span> <a href="#orgc5e3144">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2418f0d" class="outline-2">
-<h2 id="org2418f0d"><span class="section-number-2">2.</span> <a href="#org2418f0d">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-orgf6d3052" class="outline-2">
+<h2 id="orgf6d3052"><span class="section-number-2">2.</span> <a href="#orgf6d3052">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +82,8 @@
 </div>
 </div>
 
-<div id="outline-container-org0ff2ca4" class="outline-2">
-<h2 id="org0ff2ca4"><span class="section-number-2">3.</span> <a href="#org0ff2ca4">科研训练</a></h2>
+<div id="outline-container-org34e9004" class="outline-2">
+<h2 id="org34e9004"><span class="section-number-2">3.</span> <a href="#org34e9004">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +91,8 @@
 </div>
 </div>
 
-<div id="outline-container-org394668d" class="outline-2">
-<h2 id="org394668d"><span class="section-number-2">4.</span> <a href="#org394668d">520</a></h2>
+<div id="outline-container-org669f7b2" class="outline-2">
+<h2 id="org669f7b2"><span class="section-number-2">4.</span> <a href="#org669f7b2">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 21:49</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-11 03:05</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
