Update from https://github.com/thebesttv/eserver-static/commit/bcd4799847fec909c281a2e9466050c69bc1c9f8

--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-11 03:05 -->
+<!-- 2022-10-12 02:58 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -36,9 +36,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org77572ec">1. 水水体育课</a></li>
-<li><a href="#org499da7d">2. 又是一轮毕业季</a></li>
-<li><a href="#org7068eaa">3. 520 点灯</a></li>
+<li><a href="#orgfdc6b5a">1. 水水体育课</a></li>
+<li><a href="#org61fbdbd">2. 又是一轮毕业季</a></li>
+<li><a href="#org595944f">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -47,8 +47,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-org77572ec" class="outline-2">
-<h2 id="org77572ec"><span class="section-number-2">1.</span> <a href="#org77572ec">水水体育课</a></h2>
+<div id="outline-container-orgfdc6b5a" class="outline-2">
+<h2 id="orgfdc6b5a"><span class="section-number-2">1.</span> <a href="#orgfdc6b5a">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -56,8 +56,8 @@
 </div>
 </div>
 
-<div id="outline-container-org499da7d" class="outline-2">
-<h2 id="org499da7d"><span class="section-number-2">2.</span> <a href="#org499da7d">又是一轮毕业季</a></h2>
+<div id="outline-container-org61fbdbd" class="outline-2">
+<h2 id="org61fbdbd"><span class="section-number-2">2.</span> <a href="#org61fbdbd">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -76,8 +76,8 @@
 </div>
 </div>
 
-<div id="outline-container-org7068eaa" class="outline-2">
-<h2 id="org7068eaa"><span class="section-number-2">3.</span> <a href="#org7068eaa">520 点灯</a></h2>
+<div id="outline-container-org595944f" class="outline-2">
+<h2 id="org595944f"><span class="section-number-2">3.</span> <a href="#org595944f">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -88,13 +88,13 @@
 </p>
 
 
-<figure id="org8659f45">
+<figure id="org02566c6">
 <img src="./2021-05-20/lights-1.jpg" alt="lights-1.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
 
 
-<figure id="org60beb07">
+<figure id="org9d483c8">
 <img src="./2021-05-20/lights-2.jpg" alt="lights-2.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -103,7 +103,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="org80b57b5">
+<figure id="orga3f927b">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -115,7 +115,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-11 03:05</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-12 02:58</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
